zetasql/parser/testdata/unpivot.test
# Simple UNPIVOT
SELECT * FROM t UNPIVOT (a FOR c IN (x, y));
--
QueryStatement [0-43] [SELECT * FROM...IN (x, y))]
  Query [0-43] [SELECT * FROM...IN (x, y))]
    Select [0-43] [SELECT * FROM...IN (x, y))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-43] [FROM t UNPIVOT...IN (x, y))]
        TablePathExpression [14-43] [t UNPIVOT (a FOR c IN (x, y))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-43] [UNPIVOT (a FOR c IN (x, y))]
            PathExpressionList [25-26] [a]
              PathExpression [25-26] [a]
                Identifier(a) [25-26] [a]
            PathExpression [31-32] [c]
              Identifier(c) [31-32] [c]
            UnpivotInItemList [36-42] [(x, y)]
              UnpivotInItem [37-38] [x]
                PathExpressionList [37-38] [x]
                  PathExpression [37-38] [x]
                    Identifier(x) [37-38] [x]
              UnpivotInItem [40-41] [y]
                PathExpressionList [40-41] [y]
                  PathExpression [40-41] [y]
                    Identifier(y) [40-41] [y]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR c IN ((x), (y)))
==

# Simple UNPIVOT with EXCLUDE NULLS
SELECT * FROM t UNPIVOT EXCLUDE NULLS (a FOR c IN (x, y));
--
QueryStatement [0-57] [SELECT * FROM...IN (x, y))]
  Query [0-57] [SELECT * FROM...IN (x, y))]
    Select [0-57] [SELECT * FROM...IN (x, y))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-57] [FROM t UNPIVOT...IN (x, y))]
        TablePathExpression [14-57] [t UNPIVOT...IN (x, y))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause(EXCLUDE NULLS) [16-57] [UNPIVOT EXCLUDE...IN (x, y))]
            PathExpressionList [39-40] [a]
              PathExpression [39-40] [a]
                Identifier(a) [39-40] [a]
            PathExpression [45-46] [c]
              Identifier(c) [45-46] [c]
            UnpivotInItemList [50-56] [(x, y)]
              UnpivotInItem [51-52] [x]
                PathExpressionList [51-52] [x]
                  PathExpression [51-52] [x]
                    Identifier(x) [51-52] [x]
              UnpivotInItem [54-55] [y]
                PathExpressionList [54-55] [y]
                  PathExpression [54-55] [y]
                    Identifier(y) [54-55] [y]
--
SELECT
  *
FROM
  t UNPIVOT EXCLUDE NULLS (a FOR c IN ((x), (y)))
==

# Simple UNPIVOT with INCLUDE NULLS
SELECT * FROM t UNPIVOT INCLUDE NULLS (a FOR c IN (x, y));
--
QueryStatement [0-57] [SELECT * FROM...IN (x, y))]
  Query [0-57] [SELECT * FROM...IN (x, y))]
    Select [0-57] [SELECT * FROM...IN (x, y))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-57] [FROM t UNPIVOT...IN (x, y))]
        TablePathExpression [14-57] [t UNPIVOT...IN (x, y))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause(INCLUDE NULLS) [16-57] [UNPIVOT INCLUDE...IN (x, y))]
            PathExpressionList [39-40] [a]
              PathExpression [39-40] [a]
                Identifier(a) [39-40] [a]
            PathExpression [45-46] [c]
              Identifier(c) [45-46] [c]
            UnpivotInItemList [50-56] [(x, y)]
              UnpivotInItem [51-52] [x]
                PathExpressionList [51-52] [x]
                  PathExpression [51-52] [x]
                    Identifier(x) [51-52] [x]
              UnpivotInItem [54-55] [y]
                PathExpressionList [54-55] [y]
                  PathExpression [54-55] [y]
                    Identifier(y) [54-55] [y]
--
SELECT
  *
FROM
  t UNPIVOT INCLUDE NULLS (a FOR c IN ((x), (y)))
==

# Simple UNPIVOT with typo in EXCLUDE NULLS
SELECT * FROM t UNPIVOT EXCLUDE NULL (a FOR c IN (x, y));
--
ERROR: Syntax error: Expected keyword NULLS but got keyword NULL [at 1:33]
SELECT * FROM t UNPIVOT EXCLUDE NULL (a FOR c IN (x, y));
                                ^
==

# Simple UNPIVOT with single-element IN-list
SELECT * FROM t UNPIVOT(a FOR b IN (x));
--
QueryStatement [0-39] [SELECT * FROM...b IN (x))]
  Query [0-39] [SELECT * FROM...b IN (x))]
    Select [0-39] [SELECT * FROM...b IN (x))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-39] [FROM t UNPIVOT(a FOR b IN (x))]
        TablePathExpression [14-39] [t UNPIVOT(a FOR b IN (x))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-39] [UNPIVOT(a FOR b IN (x))]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(x)]
              UnpivotInItem [36-37] [x]
                PathExpressionList [36-37] [x]
                  PathExpression [36-37] [x]
                    Identifier(x) [36-37] [x]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((x)))
==

# Simple UNPIVOT with single-element IN-list with parentheses.
SELECT * FROM t UNPIVOT((a) FOR b IN (x));
--
QueryStatement [0-41] [SELECT * FROM...b IN (x))]
  Query [0-41] [SELECT * FROM...b IN (x))]
    Select [0-41] [SELECT * FROM...b IN (x))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-41] [FROM t UNPIVOT...b IN (x))]
        TablePathExpression [14-41] [t UNPIVOT((a) FOR b IN (x))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-41] [UNPIVOT((a) FOR b IN (x))]
            PathExpressionList [25-26] [a]
              PathExpression [25-26] [a]
                Identifier(a) [25-26] [a]
            PathExpression [32-33] [b]
              Identifier(b) [32-33] [b]
            UnpivotInItemList [37-40] [(x)]
              UnpivotInItem [38-39] [x]
                PathExpressionList [38-39] [x]
                  PathExpression [38-39] [x]
                    Identifier(x) [38-39] [x]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((x)))
==

# Multiple output value columns in UNPIVOT
SELECT * FROM t UNPIVOT((a, b) FOR c IN ((x, y)));
--
QueryStatement [0-49] [SELECT * FROM...((x, y)))]
  Query [0-49] [SELECT * FROM...((x, y)))]
    Select [0-49] [SELECT * FROM...((x, y)))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-49] [FROM t UNPIVOT...((x, y)))]
        TablePathExpression [14-49] [t UNPIVOT(...((x, y)))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-49] [UNPIVOT((a...((x, y)))]
            PathExpressionList [25-29] [a, b]
              PathExpression [25-26] [a]
                Identifier(a) [25-26] [a]
              PathExpression [28-29] [b]
                Identifier(b) [28-29] [b]
            PathExpression [35-36] [c]
              Identifier(c) [35-36] [c]
            UnpivotInItemList [40-48] [((x, y))]
              UnpivotInItem [41-47] [(x, y)]
                PathExpressionList [42-46] [x, y]
                  PathExpression [42-43] [x]
                    Identifier(x) [42-43] [x]
                  PathExpression [45-46] [y]
                    Identifier(y) [45-46] [y]
--
SELECT
  *
FROM
  t UNPIVOT((a, b) FOR c IN ((x, y)))
==

# Columns with default and explicit string labels.
SELECT * FROM t UNPIVOT(a FOR e IN ((f), w AS '1', (x) '2', y "3"));
--
QueryStatement [0-67] [SELECT * FROM...', y "3"))]
  Query [0-67] [SELECT * FROM...', y "3"))]
    Select [0-67] [SELECT * FROM...', y "3"))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-67] [FROM t UNPIVOT...', y "3"))]
        TablePathExpression [14-67] [t UNPIVOT(...', y "3"))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-67] [UNPIVOT(a...', y "3"))]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [e]
              Identifier(e) [30-31] [e]
            UnpivotInItemList [35-66] [((f), w AS...2', y "3")]
              UnpivotInItem [36-39] [(f)]
                PathExpressionList [37-38] [f]
                  PathExpression [37-38] [f]
                    Identifier(f) [37-38] [f]
              UnpivotInItem [41-49] [w AS '1']
                PathExpressionList [41-42] [w]
                  PathExpression [41-42] [w]
                    Identifier(w) [41-42] [w]
                UnpivotInItemLabel [43-49] [AS '1']
                  StringLiteral('1') [46-49] ['1']
              UnpivotInItem [51-58] [(x) '2']
                PathExpressionList [52-53] [x]
                  PathExpression [52-53] [x]
                    Identifier(x) [52-53] [x]
                UnpivotInItemLabel [54-58] ['2']
                  StringLiteral('2') [55-58] ['2']
              UnpivotInItem [60-65] [y "3"]
                PathExpressionList [60-61] [y]
                  PathExpression [60-61] [y]
                    Identifier(y) [60-61] [y]
                UnpivotInItemLabel [61-65] ["3"]
                  StringLiteral("3") [62-65] ["3"]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR e IN ((f), (w) AS '1', (x) AS '2', (y) AS "3"))
==

# Column names with integer labels.
SELECT * FROM t UNPIVOT(a FOR e IN (w AS 1, x AS 2));
--
QueryStatement [0-52] [SELECT * FROM..., x AS 2))]
  Query [0-52] [SELECT * FROM..., x AS 2))]
    Select [0-52] [SELECT * FROM..., x AS 2))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-52] [FROM t UNPIVOT..., x AS 2))]
        TablePathExpression [14-52] [t UNPIVOT(..., x AS 2))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-52] [UNPIVOT(a..., x AS 2))]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [e]
              Identifier(e) [30-31] [e]
            UnpivotInItemList [35-51] [(w AS 1, x AS 2)]
              UnpivotInItem [36-42] [w AS 1]
                PathExpressionList [36-37] [w]
                  PathExpression [36-37] [w]
                    Identifier(w) [36-37] [w]
                UnpivotInItemLabel [38-42] [AS 1]
                  IntLiteral(1) [41-42] [1]
              UnpivotInItem [44-50] [x AS 2]
                PathExpressionList [44-45] [x]
                  PathExpression [44-45] [x]
                    Identifier(x) [44-45] [x]
                UnpivotInItemLabel [46-50] [AS 2]
                  IntLiteral(2) [49-50] [2]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR e IN ((w) AS 1, (x) AS 2))
==

# Columns with labels that are of type double (neither int or string)
SELECT * FROM t UNPIVOT(a FOR e IN (w AS 1.1));
--
ERROR: Syntax error: Expected integer literal or string literal but got floating point literal "1.1" [at 1:42]
SELECT * FROM t UNPIVOT(a FOR e IN (w AS 1.1));
                                         ^
==

# Unpivot labels with NULL values
SELECT * FROM t UNPIVOT(a FOR e IN (w AS null));
--
ERROR: Syntax error: Expected integer literal or string literal but got keyword NULL [at 1:42]
SELECT * FROM t UNPIVOT(a FOR e IN (w AS null));
                                         ^
==

# Unpivot with negative integer labels.
SELECT * FROM KeyValue UNPIVOT(a for b in (Key as -1));
--
ERROR: Syntax error: Expected integer literal or string literal but got "-" [at 1:51]
SELECT * FROM KeyValue UNPIVOT(a for b in (Key as -1));
                                                  ^
==

# UNPIVOT on join input (comma join)
SELECT * FROM t1,t2 UNPIVOT(a for b IN (c));
--
QueryStatement [0-43] [SELECT * FROM...b IN (c))]
  Query [0-43] [SELECT * FROM...b IN (c))]
    Select [0-43] [SELECT * FROM...b IN (c))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-43] [FROM t1,t2...b IN (c))]
        Join(COMMA) [14-43] [t1,t2 UNPIVOT(a for b IN (c))]
          TablePathExpression [14-16] [t1]
            PathExpression [14-16] [t1]
              Identifier(t1) [14-16] [t1]
          Location [16-17] [,]
          TablePathExpression [17-43] [t2 UNPIVOT(a for b IN (c))]
            PathExpression [17-19] [t2]
              Identifier(t2) [17-19] [t2]
            UnpivotClause [20-43] [UNPIVOT(a for b IN (c))]
              PathExpressionList [28-29] [a]
                PathExpression [28-29] [a]
                  Identifier(a) [28-29] [a]
              PathExpression [34-35] [b]
                Identifier(b) [34-35] [b]
              UnpivotInItemList [39-42] [(c)]
                UnpivotInItem [40-41] [c]
                  PathExpressionList [40-41] [c]
                    PathExpression [40-41] [c]
                      Identifier(c) [40-41] [c]
--
SELECT
  *
FROM
  t1,
  t2 UNPIVOT(a FOR b IN ((c)))
==

# UNPIVOT on join input (inner join)
SELECT * FROM t1 INNER JOIN t2 UNPIVOT(a for b IN (c)) USING(x);
--
QueryStatement [0-63] [SELECT * FROM...) USING(x)]
  Query [0-63] [SELECT * FROM...) USING(x)]
    Select [0-63] [SELECT * FROM...) USING(x)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-63] [FROM t1 INNER...) USING(x)]
        Join(INNER) [14-63] [t1 INNER JOIN...) USING(x)]
          TablePathExpression [14-16] [t1]
            PathExpression [14-16] [t1]
              Identifier(t1) [14-16] [t1]
          Location [17-27] [INNER JOIN]
          TablePathExpression [28-54] [t2 UNPIVOT(a for b IN (c))]
            PathExpression [28-30] [t2]
              Identifier(t2) [28-30] [t2]
            UnpivotClause [31-54] [UNPIVOT(a for b IN (c))]
              PathExpressionList [39-40] [a]
                PathExpression [39-40] [a]
                  Identifier(a) [39-40] [a]
              PathExpression [45-46] [b]
                Identifier(b) [45-46] [b]
              UnpivotInItemList [50-53] [(c)]
                UnpivotInItem [51-52] [c]
                  PathExpressionList [51-52] [c]
                    PathExpression [51-52] [c]
                      Identifier(c) [51-52] [c]
          UsingClause [55-63] [USING(x)]
            Identifier(x) [61-62] [x]
--
SELECT
  *
FROM
  t1
  INNER JOIN
  t2 UNPIVOT(a FOR b IN ((c)))
  USING(x)
==

# UNPIVOT on join input (cross join)
SELECT * FROM t1 CROSS JOIN t2 UNPIVOT(a for b in (c));
--
QueryStatement [0-54] [SELECT * FROM...b in (c))]
  Query [0-54] [SELECT * FROM...b in (c))]
    Select [0-54] [SELECT * FROM...b in (c))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-54] [FROM t1 CROSS...b in (c))]
        Join(CROSS) [14-54] [t1 CROSS JOIN...b in (c))]
          TablePathExpression [14-16] [t1]
            PathExpression [14-16] [t1]
              Identifier(t1) [14-16] [t1]
          Location [17-27] [CROSS JOIN]
          TablePathExpression [28-54] [t2 UNPIVOT(a for b in (c))]
            PathExpression [28-30] [t2]
              Identifier(t2) [28-30] [t2]
            UnpivotClause [31-54] [UNPIVOT(a for b in (c))]
              PathExpressionList [39-40] [a]
                PathExpression [39-40] [a]
                  Identifier(a) [39-40] [a]
              PathExpression [45-46] [b]
                Identifier(b) [45-46] [b]
              UnpivotInItemList [50-53] [(c)]
                UnpivotInItem [51-52] [c]
                  PathExpressionList [51-52] [c]
                    PathExpression [51-52] [c]
                      Identifier(c) [51-52] [c]
--
SELECT
  *
FROM
  t1
  CROSS JOIN
  t2 UNPIVOT(a FOR b IN ((c)))
==

# alias on the result of the entire UNPIVOT
SELECT * FROM t UNPIVOT(a for b in (c)) AS t_unpivot;
--
QueryStatement [0-52] [SELECT * FROM...t_unpivot]
  Query [0-52] [SELECT * FROM...t_unpivot]
    Select [0-52] [SELECT * FROM...t_unpivot]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-52] [FROM t UNPIVOT...t_unpivot]
        TablePathExpression [14-52] [t UNPIVOT(...t_unpivot]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-52] [UNPIVOT(a...t_unpivot]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(c)]
              UnpivotInItem [36-37] [c]
                PathExpressionList [36-37] [c]
                  PathExpression [36-37] [c]
                    Identifier(c) [36-37] [c]
            Alias [40-52] [AS t_unpivot]
              Identifier(t_unpivot) [43-52] [t_unpivot]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS t_unpivot
==

# UNPIVOT on tvf result
SELECT * FROM MyTVF(t) UNPIVOT(a for b in (c));
--
QueryStatement [0-46] [SELECT * FROM...b in (c))]
  Query [0-46] [SELECT * FROM...b in (c))]
    Select [0-46] [SELECT * FROM...b in (c))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-46] [FROM MyTVF...b in (c))]
        TVF [14-46] [MyTVF(t) UNPIVOT...b in (c))]
          PathExpression [14-19] [MyTVF]
            Identifier(MyTVF) [14-19] [MyTVF]
          TVFArgument [20-21] [t]
            PathExpression [20-21] [t]
              Identifier(t) [20-21] [t]
          UnpivotClause [23-46] [UNPIVOT(a for b in (c))]
            PathExpressionList [31-32] [a]
              PathExpression [31-32] [a]
                Identifier(a) [31-32] [a]
            PathExpression [37-38] [b]
              Identifier(b) [37-38] [b]
            UnpivotInItemList [42-45] [(c)]
              UnpivotInItem [43-44] [c]
                PathExpressionList [43-44] [c]
                  PathExpression [43-44] [c]
                    Identifier(c) [43-44] [c]
--
SELECT
  *
FROM
  MyTVF(t) UNPIVOT(a FOR b IN ((c)))
==

# UNPIVOT on tvf argument
SELECT * from MyTVF((SELECT * FROM t UNPIVOT(a for b in (c))));
--
QueryStatement [0-62] [SELECT * from...in (c))))]
  Query [0-62] [SELECT * from...in (c))))]
    Select [0-62] [SELECT * from...in (c))))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-62] [from MyTVF...in (c))))]
        TVF [14-62] [MyTVF((SELECT...in (c))))]
          PathExpression [14-19] [MyTVF]
            Identifier(MyTVF) [14-19] [MyTVF]
          TVFArgument [20-61] [(SELECT *...b in (c)))]
            ExpressionSubquery [20-61] [(SELECT *...b in (c)))]
              Query [21-60] [SELECT * FROM...b in (c))]
                Select [21-60] [SELECT * FROM...b in (c))]
                  SelectList [28-29] [*]
                    SelectColumn [28-29] [*]
                      Star(*) [28-29] [*]
                  FromClause [30-60] [FROM t UNPIVOT(a for b in (c))]
                    TablePathExpression [35-60] [t UNPIVOT(a for b in (c))]
                      PathExpression [35-36] [t]
                        Identifier(t) [35-36] [t]
                      UnpivotClause [37-60] [UNPIVOT(a for b in (c))]
                        PathExpressionList [45-46] [a]
                          PathExpression [45-46] [a]
                            Identifier(a) [45-46] [a]
                        PathExpression [51-52] [b]
                          Identifier(b) [51-52] [b]
                        UnpivotInItemList [56-59] [(c)]
                          UnpivotInItem [57-58] [c]
                            PathExpressionList [57-58] [c]
                              PathExpression [57-58] [c]
                                Identifier(c) [57-58] [c]
--
SELECT
  *
FROM
  MyTVF((
    SELECT
      *
    FROM
      t UNPIVOT(a FOR b IN ((c)))
  ))
==

# UNPIVOT on subquery
SELECT * FROM (SELECT a, b, c FROM t) UNPIVOT(a for b in (c));
--
QueryStatement [0-61] [SELECT * FROM...b in (c))]
  Query [0-61] [SELECT * FROM...b in (c))]
    Select [0-61] [SELECT * FROM...b in (c))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-61] [FROM (SELECT...b in (c))]
        TableSubquery [14-61] [(SELECT a,...b in (c))]
          Query [15-36] [SELECT a, b, c FROM t]
            Select [15-36] [SELECT a, b, c FROM t]
              SelectList [22-29] [a, b, c]
                SelectColumn [22-23] [a]
                  PathExpression [22-23] [a]
                    Identifier(a) [22-23] [a]
                SelectColumn [25-26] [b]
                  PathExpression [25-26] [b]
                    Identifier(b) [25-26] [b]
                SelectColumn [28-29] [c]
                  PathExpression [28-29] [c]
                    Identifier(c) [28-29] [c]
              FromClause [30-36] [FROM t]
                TablePathExpression [35-36] [t]
                  PathExpression [35-36] [t]
                    Identifier(t) [35-36] [t]
          UnpivotClause [38-61] [UNPIVOT(a for b in (c))]
            PathExpressionList [46-47] [a]
              PathExpression [46-47] [a]
                Identifier(a) [46-47] [a]
            PathExpression [52-53] [b]
              Identifier(b) [52-53] [b]
            UnpivotInItemList [57-60] [(c)]
              UnpivotInItem [58-59] [c]
                PathExpressionList [58-59] [c]
                  PathExpression [58-59] [c]
                    Identifier(c) [58-59] [c]
--
SELECT
  *
FROM
  (
    SELECT
      a,
      b,
      c
    FROM
      t
  ) UNPIVOT(a FOR b IN ((c)))
==

# UNPIVOT combined with other clauses
SELECT * FROM t UNPIVOT(a for b in (c))
WHERE a < 5 HAVING sum_zero = 1 LIMIT 10;
--
QueryStatement [0-80] [SELECT * FROM...1 LIMIT 10]
  Query [0-80] [SELECT * FROM...1 LIMIT 10]
    Select [0-71] [SELECT * FROM...sum_zero = 1]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-39] [FROM t UNPIVOT(a for b in (c))]
        TablePathExpression [14-39] [t UNPIVOT(a for b in (c))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-39] [UNPIVOT(a for b in (c))]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(c)]
              UnpivotInItem [36-37] [c]
                PathExpressionList [36-37] [c]
                  PathExpression [36-37] [c]
                    Identifier(c) [36-37] [c]
      WhereClause [40-51] [WHERE a < 5]
        BinaryExpression(<) [46-51] [a < 5]
          PathExpression [46-47] [a]
            Identifier(a) [46-47] [a]
          IntLiteral(5) [50-51] [5]
      Having [52-71] [HAVING sum_zero = 1]
        BinaryExpression(=) [59-71] [sum_zero = 1]
          PathExpression [59-67] [sum_zero]
            Identifier(sum_zero) [59-67] [sum_zero]
          IntLiteral(1) [70-71] [1]
    LimitOffset [72-80] [LIMIT 10]
      IntLiteral(10) [78-80] [10]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c)))
WHERE
  a < 5
HAVING sum_zero = 1
LIMIT 10
==

# UNPIVOT combined with TABLESAMPLE
SELECT * FROM
t UNPIVOT(a for b in (C)) {{AS t_unpivot|}}
TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
ALTERNATION GROUP: AS t_unpivot
--
QueryStatement [0-100] [SELECT * FROM...REPEATABLE(10)]
  Query [0-100] [SELECT * FROM...REPEATABLE(10)]
    Select [0-100] [SELECT * FROM...REPEATABLE(10)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-100] [FROM t UNPIVOT...EPEATABLE(10)]
        TablePathExpression [14-100] [t UNPIVOT(...REPEATABLE(10)]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-52] [UNPIVOT(a...t_unpivot]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(C)]
              UnpivotInItem [36-37] [C]
                PathExpressionList [36-37] [C]
                  PathExpression [36-37] [C]
                    Identifier(C) [36-37] [C]
            Alias [40-52] [AS t_unpivot]
              Identifier(t_unpivot) [43-52] [t_unpivot]
          SampleClause [53-100] [TABLESAMPLE...REPEATABLE(10)]
            Identifier(RESERVOIR) [65-74] [RESERVOIR]
            SampleSize [76-84] [100 ROWS]
              IntLiteral(100) [76-79] [100]
            SampleSuffix [86-100] [REPEATABLE(10)]
              RepeatableClause [86-100] [REPEATABLE(10)]
                IntLiteral(10) [97-99] [10]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((C))) AS t_unpivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-88] [SELECT * FROM...REPEATABLE(10)]
  Query [0-88] [SELECT * FROM...REPEATABLE(10)]
    Select [0-88] [SELECT * FROM...REPEATABLE(10)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-88] [FROM t UNPIVOT...EPEATABLE(10)]
        TablePathExpression [14-88] [t UNPIVOT(...REPEATABLE(10)]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-39] [UNPIVOT(a for b in (C))]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(C)]
              UnpivotInItem [36-37] [C]
                PathExpressionList [36-37] [C]
                  PathExpression [36-37] [C]
                    Identifier(C) [36-37] [C]
          SampleClause [41-88] [TABLESAMPLE...REPEATABLE(10)]
            Identifier(RESERVOIR) [53-62] [RESERVOIR]
            SampleSize [64-72] [100 ROWS]
              IntLiteral(100) [64-67] [100]
            SampleSuffix [74-88] [REPEATABLE(10)]
              RepeatableClause [74-88] [REPEATABLE(10)]
                IntLiteral(10) [85-87] [10]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((C))) TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# UNPIVOT combined with TABLESAMPLE and alias
SELECT * FROM
t UNPIVOT(a for b in (c))
AS t_unpivot TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
QueryStatement [0-100] [SELECT * FROM...REPEATABLE(10)]
  Query [0-100] [SELECT * FROM...REPEATABLE(10)]
    Select [0-100] [SELECT * FROM...REPEATABLE(10)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-100] [FROM t UNPIVOT...EPEATABLE(10)]
        TablePathExpression [14-100] [t UNPIVOT(...REPEATABLE(10)]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-52] [UNPIVOT(a...t_unpivot]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(c)]
              UnpivotInItem [36-37] [c]
                PathExpressionList [36-37] [c]
                  PathExpression [36-37] [c]
                    Identifier(c) [36-37] [c]
            Alias [40-52] [AS t_unpivot]
              Identifier(t_unpivot) [43-52] [t_unpivot]
          SampleClause [53-100] [TABLESAMPLE...REPEATABLE(10)]
            Identifier(RESERVOIR) [65-74] [RESERVOIR]
            SampleSize [76-84] [100 ROWS]
              IntLiteral(100) [76-79] [100]
            SampleSuffix [86-100] [REPEATABLE(10)]
              RepeatableClause [86-100] [REPEATABLE(10)]
                IntLiteral(10) [97-99] [10]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS t_unpivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# UNPIVOT on time-travel table
SELECT * FROM
(SELECT * FROM t FOR SYSTEM TIME AS OF '2018-01-01')
UNPIVOT(a for b in (c))
--
QueryStatement [0-90] [SELECT * FROM...b in (c))]
  Query [0-90] [SELECT * FROM...b in (c))]
    Select [0-90] [SELECT * FROM...b in (c))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-90] [FROM (SELECT...b in (c))]
        TableSubquery [14-90] [(SELECT *...b in (c))]
          Query [15-65] [SELECT * FROM...2018-01-01']
            Select [15-65] [SELECT * FROM...2018-01-01']
              SelectList [22-23] [*]
                SelectColumn [22-23] [*]
                  Star(*) [22-23] [*]
              FromClause [24-65] [FROM t FOR...2018-01-01']
                TablePathExpression [29-65] [t FOR SYSTEM...2018-01-01']
                  PathExpression [29-30] [t]
                    Identifier(t) [29-30] [t]
                  ForSystemTime [31-65] [FOR SYSTEM...2018-01-01']
                    StringLiteral('2018-01-01') [53-65] ['2018-01-01']
          UnpivotClause [67-90] [UNPIVOT(a for b in (c))]
            PathExpressionList [75-76] [a]
              PathExpression [75-76] [a]
                Identifier(a) [75-76] [a]
            PathExpression [81-82] [b]
              Identifier(b) [81-82] [b]
            UnpivotInItemList [86-89] [(c)]
              UnpivotInItem [87-88] [c]
                PathExpressionList [87-88] [c]
                  PathExpression [87-88] [c]
                    Identifier(c) [87-88] [c]
--
SELECT
  *
FROM
  (
    SELECT
      *
    FROM
      t FOR SYSTEM_TIME AS OF '2018-01-01'
  ) UNPIVOT(a FOR b IN ((c)))
==

# time-travel on unpivot result
SELECT * FROM
t
UNPIVOT(a for b in (c))
FOR SYSTEM TIME AS OF '2018-01-01';
--
ERROR: Syntax error: UNPIVOT and FOR SYSTEM TIME AS OF may not be combined [at 4:1]
FOR SYSTEM TIME AS OF '2018-01-01';
^
==

# Table alias named "UNPIVOT" - OK because UNPIVOT is a non-reserved keyword.
SELECT * FROM t UNPIVOT;
--
QueryStatement [0-23] [SELECT * FROM t UNPIVOT]
  Query [0-23] [SELECT * FROM t UNPIVOT]
    Select [0-23] [SELECT * FROM t UNPIVOT]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-23] [FROM t UNPIVOT]
        TablePathExpression [14-23] [t UNPIVOT]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [16-23] [UNPIVOT]
            Identifier(UNPIVOT) [16-23] [UNPIVOT]
--
SELECT
  *
FROM
  t AS UNPIVOT
==

# ERROR: Unpivot clause containing only parens
SELECT * FROM t UNPIVOT();
--
ERROR: Syntax error: Unexpected ")" [at 1:25]
SELECT * FROM t UNPIVOT();
                        ^
==

# ERROR: Unpivot clause with only unpivot expr
SELECT * FROM t UNPIVOT(x);
--
ERROR: Syntax error: Expected keyword FOR but got ")" [at 1:26]
SELECT * FROM t UNPIVOT(x);
                         ^
==

# ERROR: Unpivot clause with only unpivot expr and FOR expr
SELECT * FROM t UNPIVOT(x FOR y);
--
ERROR: Syntax error: Expected "." or keyword IN but got ")" [at 1:32]
SELECT * FROM t UNPIVOT(x FOR y);
                               ^
==

# ERROR: Empty IN-list
SELECT * FROM t UNPIVOT(x FOR y IN ());
--
ERROR: Syntax error: Unexpected ")" [at 1:37]
SELECT * FROM t UNPIVOT(x FOR y IN ());
                                    ^
==

# ERROR: Trailing comma in IN-list
SELECT * FROM t UNPIVOT(x FOR y IN (a,));
--
ERROR: Syntax error: Unexpected ")" [at 1:39]
SELECT * FROM t UNPIVOT(x FOR y IN (a,));
                                      ^
==

# ERROR: Missing right-parenthesis
SELECT * FROM t UNPIVOT(x FOR y IN (a);
--
ERROR: Syntax error: Expected ")" but got ";" [at 1:39]
SELECT * FROM t UNPIVOT(x FOR y IN (a);
                                      ^
==

# ERROR: Missing unpivot output columns
SELECT * FROM t UNPIVOT(FOR y IN (a));
--
ERROR: Syntax error: Unexpected keyword FOR [at 1:25]
SELECT * FROM t UNPIVOT(FOR y IN (a));
                        ^
==

# ERROR: Trailing comma after last unpivot output column
SELECT * FROM t UNPIVOT(x, y, FOR a IN (b));
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x, y, FOR a IN (b));
                         ^
==

# UNPIVOT as identifier outside of table context
SELECT UNPIVOT;
--
QueryStatement [0-14] [SELECT UNPIVOT]
  Query [0-14] [SELECT UNPIVOT]
    Select [0-14] [SELECT UNPIVOT]
      SelectList [7-14] [UNPIVOT]
        SelectColumn [7-14] [UNPIVOT]
          PathExpression [7-14] [UNPIVOT]
            Identifier(UNPIVOT) [7-14] [UNPIVOT]
--
SELECT
  UNPIVOT
==

# UNPIVOT AS alias using AS keyword
SELECT * FROM t AS UNPIVOT;
--
QueryStatement [0-26] [SELECT * FROM t AS UNPIVOT]
  Query [0-26] [SELECT * FROM t AS UNPIVOT]
    Select [0-26] [SELECT * FROM t AS UNPIVOT]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-26] [FROM t AS UNPIVOT]
        TablePathExpression [14-26] [t AS UNPIVOT]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [16-26] [AS UNPIVOT]
            Identifier(UNPIVOT) [19-26] [UNPIVOT]
--
SELECT
  *
FROM
  t AS UNPIVOT
==

# UNPIVOT AS alias of table produced by a UNPIVOT clause.
SELECT * FROM t UNPIVOT(a FOR b IN (c)) UNPIVOT;
--
QueryStatement [0-47] [SELECT * FROM...)) UNPIVOT]
  Query [0-47] [SELECT * FROM...)) UNPIVOT]
    Select [0-47] [SELECT * FROM...)) UNPIVOT]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-47] [FROM t UNPIVOT...)) UNPIVOT]
        TablePathExpression [14-47] [t UNPIVOT(...)) UNPIVOT]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-47] [UNPIVOT(a...)) UNPIVOT]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(c)]
              UnpivotInItem [36-37] [c]
                PathExpressionList [36-37] [c]
                  PathExpression [36-37] [c]
                    Identifier(c) [36-37] [c]
            Alias [40-47] [UNPIVOT]
              Identifier(UNPIVOT) [40-47] [UNPIVOT]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS UNPIVOT
==

# TVF named "PIVOT".
SELECT * FROM UNPIVOT(t);
--
QueryStatement [0-24] [SELECT * FROM UNPIVOT(t)]
  Query [0-24] [SELECT * FROM UNPIVOT(t)]
    Select [0-24] [SELECT * FROM UNPIVOT(t)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-24] [FROM UNPIVOT(t)]
        TVF [14-24] [UNPIVOT(t)]
          PathExpression [14-21] [UNPIVOT]
            Identifier(UNPIVOT) [14-21] [UNPIVOT]
          TVFArgument [22-23] [t]
            PathExpression [22-23] [t]
              Identifier(t) [22-23] [t]
--
SELECT
  *
FROM
  UNPIVOT(t)
==

# UNPIVOT with empty IN-list
SELECT * FROM t UNPIVOT(a for b in ());
--
ERROR: Syntax error: Unexpected ")" [at 1:37]
SELECT * FROM t UNPIVOT(a for b in ());
                                    ^
==

# UNPIVOT combined with TABLESAMPLE and alias (without AS keyword)
SELECT * FROM
t UNPIVOT(a for b in (c))
t_unpivot TABLESAMPLE RESERVOIR (100 ROWS) REPEATABLE(10)
--
QueryStatement [0-97] [SELECT * FROM...REPEATABLE(10)]
  Query [0-97] [SELECT * FROM...REPEATABLE(10)]
    Select [0-97] [SELECT * FROM...REPEATABLE(10)]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-97] [FROM t UNPIVOT...EPEATABLE(10)]
        TablePathExpression [14-97] [t UNPIVOT(...REPEATABLE(10)]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-49] [UNPIVOT(a...t_unpivot]
            PathExpressionList [24-25] [a]
              PathExpression [24-25] [a]
                Identifier(a) [24-25] [a]
            PathExpression [30-31] [b]
              Identifier(b) [30-31] [b]
            UnpivotInItemList [35-38] [(c)]
              UnpivotInItem [36-37] [c]
                PathExpressionList [36-37] [c]
                  PathExpression [36-37] [c]
                    Identifier(c) [36-37] [c]
            Alias [40-49] [t_unpivot]
              Identifier(t_unpivot) [40-49] [t_unpivot]
          SampleClause [50-97] [TABLESAMPLE...REPEATABLE(10)]
            Identifier(RESERVOIR) [62-71] [RESERVOIR]
            SampleSize [73-81] [100 ROWS]
              IntLiteral(100) [73-76] [100]
            SampleSuffix [83-97] [REPEATABLE(10)]
              RepeatableClause [83-97] [REPEATABLE(10)]
                IntLiteral(10) [94-96] [10]
--
SELECT
  *
FROM
  t UNPIVOT(a FOR b IN ((c))) AS t_unpivot TABLESAMPLE RESERVOIR(100 ROWS) REPEATABLE (10)
==

# ERROR: Multiple pivot modifiers on the same table
SELECT * FROM t
UNPIVOT(a for b in (c))
UNPIVOT(a for b in (c));
--
ERROR: Syntax error: Expected end of input but got "(" [at 3:8]
UNPIVOT(a for b in (c));
       ^
==

# ERROR: The only columns that are allowed to be aliased are the unpivot value columns.
SELECT * FROM t UNPIVOT(x {{AS y|AS}} FROM c IN (z))
--
ALTERNATION GROUP: AS y
--
ERROR: Syntax error: Expected keyword FOR but got keyword AS [at 1:27]
SELECT * FROM t UNPIVOT(x AS y FROM c IN (z))
                          ^
--
ALTERNATION GROUP: AS
--
ERROR: Syntax error: Expected keyword FOR but got keyword AS [at 1:27]
SELECT * FROM t UNPIVOT(x AS FROM c IN (z))
                          ^
==

# ERROR: unpivot output columns aren't allowed to be expressions.
SELECT * FROM t UNPIVOT({{x + y AS z|(x + y)}} FROM a IN (b))
--
ALTERNATION GROUP: x + y AS z
--
ERROR: Syntax error: Expected keyword FOR but got "+" [at 1:27]
SELECT * FROM t UNPIVOT(x + y AS z FROM a IN (b))
                          ^
--
ALTERNATION GROUP: (x + y)
--
ERROR: Syntax error: Expected ")" or "," but got "+" [at 1:28]
SELECT * FROM t UNPIVOT((x + y) FROM a IN (b))
                           ^
==

# ERROR: AS keyword as alias.
SELECT * FROM t UNPIVOT(a FOR b IN (x AS,y));
--
ERROR: Syntax error: Expected integer literal or string literal but got "," [at 1:41]
SELECT * FROM t UNPIVOT(a FOR b IN (x AS,y));
                                        ^
==

# The SQL Standard allows a parenthesized column list to follow a table alias.
# ZetaSQL does not support this, but make sure that, when the table alias is
# "PIVOT", the query fails.
SELECT * FROM t UNPIVOT({{x|x,|x,y|x,y,}});
--
ALTERNATION GROUP: x
--
ERROR: Syntax error: Expected keyword FOR but got ")" [at 1:26]
SELECT * FROM t UNPIVOT(x);
                         ^
--
ALTERNATION GROUP: x,
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x,);
                         ^
--
ALTERNATION GROUP: x,y
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x,y);
                         ^
--
ALTERNATION GROUP: x,y,
--
ERROR: Syntax error: Expected keyword FOR but got "," [at 1:26]
SELECT * FROM t UNPIVOT(x,y,);
                         ^
==

# ERROR: WITH OFFSET on pivot result (with and without alias)
SELECT * FROM
t
UNPIVOT(a for b in (c)) {{AS t_alias|t_alias|}}
WITH OFFSET {{AS t_alias|t_alias|}};
--
ALTERNATION GROUPS:
    AS t_alias,AS t_alias
    t_alias,AS t_alias
    AS t_alias
--
ERROR: UNPIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET AS t_alias;
^
--
ALTERNATION GROUPS:
    AS t_alias,t_alias
    t_alias,t_alias
    t_alias
--
ERROR: UNPIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET t_alias;
^
--
ALTERNATION GROUPS:
    AS t_alias,
    t_alias,
    <empty>
--
ERROR: UNPIVOT and WITH OFFSET cannot be combined [at 4:1]
WITH OFFSET ;
^
==

# Alias on input table of UNPIVOT, both with and without AS keyword.
SELECT * FROM t {{AS|}} t1 UNPIVOT(a FOR b IN (c));
--
ALTERNATION GROUP: AS
--
QueryStatement [0-45] [SELECT * FROM...b IN (c))]
  Query [0-45] [SELECT * FROM...b IN (c))]
    Select [0-45] [SELECT * FROM...b IN (c))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-45] [FROM t AS...b IN (c))]
        TablePathExpression [14-45] [t AS t1 UNPIVOT...b IN (c))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [16-21] [AS t1]
            Identifier(t1) [19-21] [t1]
          UnpivotClause [22-45] [UNPIVOT(a FOR b IN (c))]
            PathExpressionList [30-31] [a]
              PathExpression [30-31] [a]
                Identifier(a) [30-31] [a]
            PathExpression [36-37] [b]
              Identifier(b) [36-37] [b]
            UnpivotInItemList [41-44] [(c)]
              UnpivotInItem [42-43] [c]
                PathExpressionList [42-43] [c]
                  PathExpression [42-43] [c]
                    Identifier(c) [42-43] [c]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c)))
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-43] [SELECT * FROM...b IN (c))]
  Query [0-43] [SELECT * FROM...b IN (c))]
    Select [0-43] [SELECT * FROM...b IN (c))]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-43] [FROM t  t1...b IN (c))]
        TablePathExpression [14-43] [t  t1 UNPIVOT(a FOR b IN (c))]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [17-19] [t1]
            Identifier(t1) [17-19] [t1]
          UnpivotClause [20-43] [UNPIVOT(a FOR b IN (c))]
            PathExpressionList [28-29] [a]
              PathExpression [28-29] [a]
                Identifier(a) [28-29] [a]
            PathExpression [34-35] [b]
              Identifier(b) [34-35] [b]
            UnpivotInItemList [39-42] [(c)]
              UnpivotInItem [40-41] [c]
                PathExpressionList [40-41] [c]
                  PathExpression [40-41] [c]
                    Identifier(c) [40-41] [c]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c)))
==

# Alias on both input table and result of UNPIVOT,
# both with and without AS keyword.
SELECT * FROM t {{AS|}} t1 UNPIVOT(a FOR b IN (c)) {{AS|}} t2;
--
ALTERNATION GROUP: AS,AS
--
QueryStatement [0-51] [SELECT * FROM...(c)) AS t2]
  Query [0-51] [SELECT * FROM...(c)) AS t2]
    Select [0-51] [SELECT * FROM...(c)) AS t2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-51] [FROM t AS...(c)) AS t2]
        TablePathExpression [14-51] [t AS t1 UNPIVOT...(c)) AS t2]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [16-21] [AS t1]
            Identifier(t1) [19-21] [t1]
          UnpivotClause [22-51] [UNPIVOT(a FOR b IN (c)) AS t2]
            PathExpressionList [30-31] [a]
              PathExpression [30-31] [a]
                Identifier(a) [30-31] [a]
            PathExpression [36-37] [b]
              Identifier(b) [36-37] [b]
            UnpivotInItemList [41-44] [(c)]
              UnpivotInItem [42-43] [c]
                PathExpressionList [42-43] [c]
                  PathExpression [42-43] [c]
                    Identifier(c) [42-43] [c]
            Alias [46-51] [AS t2]
              Identifier(t2) [49-51] [t2]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
--
ALTERNATION GROUP: AS,
--
QueryStatement [0-49] [SELECT * FROM...IN (c))  t2]
  Query [0-49] [SELECT * FROM...IN (c))  t2]
    Select [0-49] [SELECT * FROM...IN (c))  t2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-49] [FROM t AS...IN (c))  t2]
        TablePathExpression [14-49] [t AS t1 UNPIVOT...IN (c))  t2]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [16-21] [AS t1]
            Identifier(t1) [19-21] [t1]
          UnpivotClause [22-49] [UNPIVOT(a FOR b IN (c))  t2]
            PathExpressionList [30-31] [a]
              PathExpression [30-31] [a]
                Identifier(a) [30-31] [a]
            PathExpression [36-37] [b]
              Identifier(b) [36-37] [b]
            UnpivotInItemList [41-44] [(c)]
              UnpivotInItem [42-43] [c]
                PathExpressionList [42-43] [c]
                  PathExpression [42-43] [c]
                    Identifier(c) [42-43] [c]
            Alias [47-49] [t2]
              Identifier(t2) [47-49] [t2]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
--
ALTERNATION GROUP: AS
--
QueryStatement [0-49] [SELECT * FROM...(c)) AS t2]
  Query [0-49] [SELECT * FROM...(c)) AS t2]
    Select [0-49] [SELECT * FROM...(c)) AS t2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-49] [FROM t  t1...(c)) AS t2]
        TablePathExpression [14-49] [t  t1 UNPIVOT...(c)) AS t2]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [17-19] [t1]
            Identifier(t1) [17-19] [t1]
          UnpivotClause [20-49] [UNPIVOT(a FOR b IN (c)) AS t2]
            PathExpressionList [28-29] [a]
              PathExpression [28-29] [a]
                Identifier(a) [28-29] [a]
            PathExpression [34-35] [b]
              Identifier(b) [34-35] [b]
            UnpivotInItemList [39-42] [(c)]
              UnpivotInItem [40-41] [c]
                PathExpressionList [40-41] [c]
                  PathExpression [40-41] [c]
                    Identifier(c) [40-41] [c]
            Alias [44-49] [AS t2]
              Identifier(t2) [47-49] [t2]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-47] [SELECT * FROM...IN (c))  t2]
  Query [0-47] [SELECT * FROM...IN (c))  t2]
    Select [0-47] [SELECT * FROM...IN (c))  t2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-47] [FROM t  t1...IN (c))  t2]
        TablePathExpression [14-47] [t  t1 UNPIVOT...IN (c))  t2]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          Alias [17-19] [t1]
            Identifier(t1) [17-19] [t1]
          UnpivotClause [20-47] [UNPIVOT(a FOR b IN (c))  t2]
            PathExpressionList [28-29] [a]
              PathExpression [28-29] [a]
                Identifier(a) [28-29] [a]
            PathExpression [34-35] [b]
              Identifier(b) [34-35] [b]
            UnpivotInItemList [39-42] [(c)]
              UnpivotInItem [40-41] [c]
                PathExpressionList [40-41] [c]
                  PathExpression [40-41] [c]
                    Identifier(c) [40-41] [c]
            Alias [45-47] [t2]
              Identifier(t2) [45-47] [t2]
--
SELECT
  *
FROM
  t AS t1 UNPIVOT(a FOR b IN ((c))) AS t2
==

# UNPIVOT on UNNEST() is an error on the resolver (because unnest() returns a
# value table), but it's allowed on the parser layer.
# Test both with and without a WITH OFFSET clause.
SELECT * FROM UNNEST([1, 2, 3]) {{WITH OFFSET|WITH OFFSET x|WITH OFFSET AS x|}}
UNPIVOT(a for b in (c)) AS x;
--
ALTERNATION GROUP: WITH OFFSET
--
ERROR: Syntax error: Expected end of input but got "(" [at 2:8]
UNPIVOT(a for b in (c)) AS x;
       ^
--
ALTERNATION GROUPS:
    WITH OFFSET x
    WITH OFFSET AS x
--
ERROR: Syntax error: Expected end of input but got keyword UNPIVOT [at 2:1]
UNPIVOT(a for b in (c)) AS x;
^
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-61] [SELECT * FROM...(c)) AS x]
  Query [0-61] [SELECT * FROM...(c)) AS x]
    Select [0-61] [SELECT * FROM...(c)) AS x]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-61] [FROM UNNEST...(c)) AS x]
        TablePathExpression [14-61] [UNNEST([1,...(c)) AS x]
          UnnestExpression [14-31] [UNNEST([1, 2, 3])]
            ArrayConstructor [21-30] [[1, 2, 3]]
              IntLiteral(1) [22-23] [1]
              IntLiteral(2) [25-26] [2]
              IntLiteral(3) [28-29] [3]
          UnpivotClause [33-61] [UNPIVOT(a for b in (c)) AS x]
            PathExpressionList [41-42] [a]
              PathExpression [41-42] [a]
                Identifier(a) [41-42] [a]
            PathExpression [47-48] [b]
              Identifier(b) [47-48] [b]
            UnpivotInItemList [52-55] [(c)]
              UnpivotInItem [53-54] [c]
                PathExpressionList [53-54] [c]
                  PathExpression [53-54] [c]
                    Identifier(c) [53-54] [c]
            Alias [57-61] [AS x]
              Identifier(x) [60-61] [x]
--
SELECT
  *
FROM
  UNNEST(ARRAY[1, 2, 3]) UNPIVOT(a FOR b IN ((c))) AS x
==

# Qualified references to column from input table within unpivot clause
SELECT * FROM t UNPIVOT(t.a FOR t.b IN (c)) {{AS|}} t2;
--
ALTERNATION GROUP: AS
--
QueryStatement [0-49] [SELECT * FROM...(c)) AS t2]
  Query [0-49] [SELECT * FROM...(c)) AS t2]
    Select [0-49] [SELECT * FROM...(c)) AS t2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-49] [FROM t UNPIVOT...(c)) AS t2]
        TablePathExpression [14-49] [t UNPIVOT(...(c)) AS t2]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-49] [UNPIVOT(t....(c)) AS t2]
            PathExpressionList [24-27] [t.a]
              PathExpression [24-27] [t.a]
                Identifier(t) [24-25] [t]
                Identifier(a) [26-27] [a]
            PathExpression [32-35] [t.b]
              Identifier(t) [32-33] [t]
              Identifier(b) [34-35] [b]
            UnpivotInItemList [39-42] [(c)]
              UnpivotInItem [40-41] [c]
                PathExpressionList [40-41] [c]
                  PathExpression [40-41] [c]
                    Identifier(c) [40-41] [c]
            Alias [44-49] [AS t2]
              Identifier(t2) [47-49] [t2]
--
SELECT
  *
FROM
  t UNPIVOT(t.a FOR t.b IN ((c))) AS t2
--
ALTERNATION GROUP: <empty>
--
QueryStatement [0-47] [SELECT * FROM...IN (c))  t2]
  Query [0-47] [SELECT * FROM...IN (c))  t2]
    Select [0-47] [SELECT * FROM...IN (c))  t2]
      SelectList [7-8] [*]
        SelectColumn [7-8] [*]
          Star(*) [7-8] [*]
      FromClause [9-47] [FROM t UNPIVOT...IN (c))  t2]
        TablePathExpression [14-47] [t UNPIVOT(...IN (c))  t2]
          PathExpression [14-15] [t]
            Identifier(t) [14-15] [t]
          UnpivotClause [16-47] [UNPIVOT(t....IN (c))  t2]
            PathExpressionList [24-27] [t.a]
              PathExpression [24-27] [t.a]
                Identifier(t) [24-25] [t]
                Identifier(a) [26-27] [a]
            PathExpression [32-35] [t.b]
              Identifier(t) [32-33] [t]
              Identifier(b) [34-35] [b]
            UnpivotInItemList [39-42] [(c)]
              UnpivotInItem [40-41] [c]
                PathExpressionList [40-41] [c]
                  PathExpression [40-41] [c]
                    Identifier(c) [40-41] [c]
            Alias [45-47] [t2]
              Identifier(t2) [45-47] [t2]
--
SELECT
  *
FROM
  t UNPIVOT(t.a FOR t.b IN ((c))) AS t2
==

# ERROR: FOR expr with its own IN clause (no parentheses)
SELECT * FROM t
UNPIVOT (a FOR y IN (x, z) IN (c,d));
--
ERROR: Syntax error: Expected ")" but got keyword IN [at 2:28]
UNPIVOT (a FOR y IN (x, z) IN (c,d));
                           ^
==

# ERROR: FOR expr with its own IN clause (with parentheses)
SELECT * FROM t
UNPIVOT(a FOR (y IN (1, 2)) IN (c,d));
--
ERROR: Syntax error: Unexpected "(" [at 2:15]
UNPIVOT(a FOR (y IN (1, 2)) IN (c,d));
              ^
